--- a/IntroJava.html
+++ b/IntroJava.html
@@ -1,17 +1,19 @@
 <html>
 
-<style>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
 
-</style>
-
+    </style>
+</head>
 
 </html>
 <body>
-<h1> Java Script Intro</h1>
+    <h1> Java Script Intro</h1>
 
-<p id="intro">HTML content can be changed with java script.</p>
+    <p id="intro">HTML content can be changed with java script.</p>
 
-<button type="button"
-onclick='document.getElementById("intro").innerHTML = "Hello Person"'>Click Me!</button>
+    <button type="button"
+    onclick='document.getElementById("intro").innerHTML = "Hello Person"'>Click Me!</button>
 
 </body>
