--- a/IntroJava.html
+++ b/IntroJava.html
@@ -12,8 +12,8 @@
 
     <p id="intro">HTML content can be changed with java script.</p>
 
-    <button type="button"
-    onclick='document.getElementById("intro").innerHTML = "Hello Person"'>Click Me!</button>
+    <button type="button" onclick='document.getElementById("intro").innerHTML = "Hello Person"'>Click Me!</button>
 
 </body>
+
 </html>
