--- a/IntroJava.html
+++ b/IntroJava.html
@@ -23,8 +23,15 @@
     <button type="button" onclick='document.getElementById("intro").innerHTML = "Hello Person"'>Click Me!</button>
 
 
-    <button onclick='window.alert("ButtonClick");'>HELLO!</button>
-    <button onclick='clicked();'>HELLO!</button>
+    <button onclick='window.alert("ButtonClick");'>Hello There.</button>
+    <button onclick='clicked();'>welcome to my webpage</button>
+
+    <button onclick="document.getElementById('myImage').src='CWAlogo1.png'">Turn on the light</button>
+
+    <img id="myImage" src="CWAlogo2.png" style="width:100px">
+
+    <button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+
 </body>
 
 </html>
