--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <img id="myImage" src="CWAlogo2.png" style="width:100px">
 
-    <button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
+    <button onclick="document.getElementById('myImage').src='CWAlogo2.png'">Turn off the light</button>
 
 </body>
 
