--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
     <button onclick='window.alert("ButtonClick");'>Hello There.</button>
     <button onclick='clicked();'>welcome to my webpage</button>
 
-    <button onclick="document.getElementById('myImage').src='CWAlogo1.png'">Turn on the light</button>
+    <img id="myImage" src="CWAlogo1.png" style="width:100px">
+
+    <button onclick="document.getElementById('myImage').src='CWAlogo1.png'">Change image</button>
 
     <img id="myImage" src="CWAlogo2.png" style="width:100px">
 
-    <button onclick="document.getElementById('myImage').src='CWAlogo2.png'">Turn off the light</button>
+    <button onclick="document.getElementById('myImage').src='CWAlogo2.png'">Change image</button>
 
 </body>
 
