--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button onclick='window.alert("ButtonClick");'>Hello There.</button>
     <button onclick='clicked();'>welcome to my webpage</button>
 
-    
+    <p>My Logo</p>
 
     <button onclick="document.getElementById('myImage').src='CWAlogo1.png'">Change image</button>
 
