--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
     <p>My Logo</p>
 
+    <img id="myImage" src="CWAlogo1.png">
+
     <button onclick="document.getElementById('myImage').src='CWAlogo1.png'">Change image</button>
 
     <img id="myImage" src="CWAlogo2.png" style="width:100px">
