--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 
     <p>My Logo</p>
 
-    <img id="myImages" src="CWAlogo1.png">
-
-    <button onclick="document.getElementById('myImages').src='CWAlogo1.png'">Change image</button>
+    <button onclick="document.getElementById('myImages').src='CWAlogo.png'">Change image</button>
 
     <img id="myImage" src="CWAlogo2.png">
 
