--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <p>My Logo</p>
 
-    <button onclick="document.getElementById('myImages').src='CWAlogo.png'">Change image</button>
+    <button onclick="document.getElementById('myImage').src='CWAlogo.png'">Change image</button>
 
     <img id="myImage" src="CWAlogo2.png">
 
