--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style type="text/css">
         body
       {
-      background-color:skyblue;
+      background-color: darkgreen;
       text-align:center;
       }
         
