--- a/index.html
+++ b/index.html
@@ -41,8 +41,25 @@
         <br>
         Enter no. of people: <input type="text" name="people">
         <br>
+        tip rate as a percentage: <input type ="button" name="percentage">
+        <br>
         <input type="submit">
+        <br>
+        <button id="addTip">Add a tip</button>
+        <br>
+        <div id="tipButtons">
+            <input type="number" id="tipPercent" placeholder="add % of the total">
+            <input type="number" id="tipCustom" placeholder="add your custom tip">
+        </div>
+
+        <div class="buttonSpace">
+            <button id="splitBtn">Split!</button>
+            <button id="resetBtn">Reset</button>
+           </div>
+        <div id="perPerson">0</div>
+
     </form>
+
 </body>
 
 </html>
