--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
            </div>
         <div id="perPerson">0</div>
 
+        <button type="button" id="calculate"></button>
+
     </form>
 
 </body>
