--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <img id="myImage" src="CWAlogo2.png">
 
     <button onclick="document.getElementById('myImage').src='CWAlogo2.png'">Change image</button>
+    <div id="container">
+        <h1>Tip Calculator</h1>
+        <div id="calculator">
        <form>
         <p>How much was your bill?
           <p>
