--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
       alert('Thisisafunctioncall');
     }
+    document.cookie = "username=John Doe";
   </script>
   <style type="text/css">
     body {
@@ -15,7 +16,7 @@
     }
   </style>
   <script type="text/javascript" src="tipcalculator.js"></script>
-
+  
 </head>
 
 <body>
@@ -113,6 +114,7 @@
       calculateTip();
 
     };
+    
   </script>
 
 
