--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@
         }
       }
     }
+  </script>
+  <script>
     //Calculate Tip
     function calculateTip() {
       var billAmt = document.getElementById("billamt").value;
@@ -158,5 +160,7 @@
 
 
 </body>
+
 <body onload="checkCookie()"></body>
+
 </html>
