--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
 
     };
 
+
+    var Games = ["Siege", "Valheim", "Minecraft"];
+    var last = Games[Games.length - 1];
+    document.getElementById("demo").innerHTML = last;
+
   </script>
 
 
