--- a/index.html
+++ b/index.html
@@ -151,20 +151,20 @@
 
     };
 
-    var Games, text,flen; i;
+  </script>
+  <script>
+    var Games, text, flen; i;
     var Games = ["Siege", "Valheim", "Minecraft"];
     flen = Games.length;
-    
-    text ="<ul>";
-    for(i= 0; i < flen; i++) {
+
+    text = "<ul>";
+    for (i = 0; i < flen; i++) {
       text += "<li>" + Games[i] + "</li>"
     }
     text += "<ul>";
 
     document.getElementById("demo").innerHTML = text;
-
   </script>
-
 
 
 
