--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
     };
 
   </script>
+
+</body>
+<body>
   <script>
     var Games, text, flen; i;
     var Games = ["Siege", "Valheim", "Minecraft"];
@@ -167,6 +170,5 @@
   </script>
 
 </body>
-
 
 </html>
