--- a/index.html
+++ b/index.html
@@ -58,13 +58,27 @@
 <body>
   <h1> Java Script Intro</h1>
 
+
+  <div class="topnav">
+    <nav></nav>
+    <a  class="active" href="#home">Home</a>
+    <a href="#Code">Code</a>
+    <a  href="java2.html" style="float:right">Lets go to page 2</a>
+    <div class="dropdown">
+        <button class="dropbtn">More
+            <i class="fa fa-caret-down"></i>
+        </button>
+      </div>
+    </div>
+</div>
+
   <p id="intro">HTML content can be changed with java script.</p>
 
   <button type="button" onclick='document.getElementById("intro").innerHTML = "Hello Person"'>Click Me!</button>
 
 
   <button onclick='window.alert("ButtonClick");'>Hello There.</button>
-  <button onclick='clicked();'>welcome to my webpage</button>
+  <button onclick='clicked();<a  href="index.html" style="float:right">Lets go back to page 1</a></button>
 
   <p>My Logo</p>
 
