--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
   <button onclick='window.alert("ButtonClick");'>Hello There.</button>
-  <button onclick='clicked();<a  href="index.html" style="float:right">Lets go back to page 1</a></button>
+  <button onclick='clicked();'> click here.</button>
 
   <p>My Logo</p>
 
