--- a/java2.html
+++ b/java2.html
@@ -1,6 +1,16 @@
 <html>
     <head>
-
+        <style>
+            nav {
+                   padding: 12px 16px;
+                   background-color: lightblue;
+                   position: relative;
+                   animation-name: example;
+                   animation-duration: 10s;
+                   overflow: hidden;
+             }
+         </style>
+       
     </head>
 
     <body>
