--- a/java2.html
+++ b/java2.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+        <h1>Welcome to my page</h1>
         <script>
             var Games, text, flen; i;
             var Games = ["Siege", "Valheim", "Minecraft"];
