--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <style>
+    nav {
+           padding: 12px 16px;
+           background-color: lightblue;
+           position: relative;
+           animation-name: example;
+           animation-duration: 10s;
+           overflow: hidden;
+     }
+ </style>
   <script>
     document.cookie = "username=Cameron Taylor";
     function setCookie(cname, cvalue, exdays) {
