--- a/java2.html
+++ b/java2.html
@@ -1,20 +1,12 @@
 <html>
     <head>
-        <style>
-            nav {
-                   padding: 12px 16px;
-                   background-color: lightblue;
-                   position: relative;
-                   animation-name: example;
-                   animation-duration: 10s;
-                   overflow: hidden;
-             }
-         </style>
+     
        
     </head>
 
     <body>
         <h1>Welcome to my page</h1>
+        <p id="demo"></p>
         <script>
             var Games, text, flen; i;
             var Games = ["Siege", "Valheim", "Minecraft"];
