--- a/java2.html
+++ b/java2.html
@@ -21,6 +21,7 @@
             document.getElementById("demo").innerHTML = text;
         </script>
 
+        <p id="demo1"></p>
         <script>
            pattern = p;
            Matcher = m;
@@ -46,7 +47,9 @@
             if (isValid(s)) 
                 System.out.println("Valid Number");     
             else
-                System.out.println("Invalid Number");     
+                System.out.println("Invalid Number");    
+                
+            document.getElementById("demo1").innerHTML = text;
 
 
         </script>
